--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ header .content-wrapper {
     margin: 0;
 }
 
-header .header-divider {
+.header-divider {
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
@@ -377,7 +377,7 @@ aside {
     /* Header */
 
     header {
-        justify-content: center;
+        justify-content: space-around;
         padding: 33px 0;
     }
 
@@ -405,7 +405,7 @@ aside {
     aside .content-wrapper {
         margin: 50px 0;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         flex-flow: row wrap;
     }
 
@@ -415,7 +415,7 @@ aside {
         margin: 0;
     }
 
-    /* Feature */
+    /* Features */
 
     .features article {
         flex-basis: 50%;
@@ -426,7 +426,7 @@ aside {
     }
 
     .features .features-items {
-        width: 50%;
+        width: 62%;
     }
 
     /* Reviews */
@@ -449,7 +449,7 @@ aside {
 
     .footer-content {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
 
@@ -469,32 +469,37 @@ aside {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-top: 20px;
     }
 
     .mission-content p {
-        width: 296px;
+        width: 45%;
     }
 
     .contact-section .content-wrapper h2 {
-        width: 506px;
+        width: 80%;
     }
 
     .contact-content {
         display: flex;
-        justify-content: space-around;
-        align-items: center;
+        justify-content: space-between;
+        align-items: flex-start;
     }
 
     /*===========================================================================
       FAQ page
       =========================================================================*/
 
+      header {
+          padding: 15px 0;
+      }
+
       .faq .content-wrapper {
           justify-content: space-between;
       }
 
       .faq-content {
-          flex-basis: 40%;
+          flex-basis: 45%;
       }
 
       .faq h2 {
@@ -504,9 +509,61 @@ aside {
 
 @media only screen and (min-width: 1200px) {
     /*Desktop sytles here*/
+
+    .content-wrapper {
+        max-width: 960px;
+    }
+
+    /* Hero */
+
+    .hero-area h1 {
+        width: 60%;
+    }
+
+    /* Aside */
+
+    aside .content-wrapper {
+        justify-content: space-around;
+    }
+
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+        width: 30%;
+    }
+
+    /* Features */
+
+    .features h2 {
+        width: 90%;
+    }
+
+    .features article {
+        flex-basis: 33%;
+    }
+
+    /* Reviews */
+
+    .reviews article div {
+        width: 42%;
+    }
+
+/*===========================================================================
+  About page
+  =========================================================================*/
+
+    .mission h2,
+    .contact-section .content-wrapper h2 {
+        width: 95%;
+    }
+
+/*===========================================================================
+  FAQ page
+  =========================================================================*/
+
+    .faq h2 {
+        width: 100%;
+    }
 }
-
-
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
