--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,65 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* General Styles */
+
+html {
+    font-size: 16px;
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1em;
+    /* color: #e2e3ed; */
+    text-align: left;
+}
+
+ul,
+ol {
+    list-style-type: none;
+}
+
+a {
+    color: #e2e3ed;
+    text-decoration: none;
+}
+
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 2.25em;
+    font-weight: 500;
+}
+
+h2 {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.875em;
+    font-weight: 500;
+}
+
+h3, h4 {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.125em;
+    font-weight: 500;
+    margin: 20px 0;
+}
+
+p {
+    font-size: 0.875em;
+    line-height: 1.125em;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+    font-style: normal;
+    text-align: center;
+}
 
    .content-wrapper {
        width: 90%;
@@ -195,6 +254,7 @@ aside {
 
 .features h2 {
     margin-bottom: 60px;
+    line-height: 1.875em;
 }
 
 .features article {
@@ -211,6 +271,7 @@ aside {
 
 .features p {
     margin: 0;
+    text-align: center;
 }
 
 /* Reviews */
