Added text styles for all breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ html {
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 1em;
-    /* color: #e2e3ed; */
+    color: #e2e3ed;
     text-align: left;
 }
 
@@ -107,12 +107,6 @@ ol {
 a {
     color: #e2e3ed;
     text-decoration: none;
-}
-
-h1 {
-    font-family: "Poppins", sans-serif;
-    font-size: 2.25em;
-    font-weight: 500;
 }
 
 h2 {
@@ -143,7 +137,6 @@ figure {
 
 address {
     font-style: normal;
-    text-align: center;
 }
 
    .content-wrapper {
@@ -158,6 +151,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #202322;
 }
 
 header {
@@ -176,6 +170,7 @@ header .content-wrapper {
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
+    background-color: #3a3a3a;
 }
 
 header nav {
@@ -184,6 +179,9 @@ header nav {
     align-items: center;
     flex-flow: row wrap;
     width: 60%;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 1.125em;
 }
 
 header nav ul {
@@ -194,6 +192,7 @@ header nav ul {
 
 footer {
     flex-direction: column;
+    text-align: center;
 }
 
 footer p {
@@ -235,6 +234,13 @@ footer .copyright {
     flex-flow: row wrap;
 }
 
+.hero-area h1 {
+    font-family: "Poppins", Helvetica, Arial, sans-serif;
+    font-size: 2.25em;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
 /* Aside */
 
 aside {
@@ -242,6 +248,33 @@ aside {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #527158;
+}
+
+aside .form {
+    margin-top: 30px;
+}
+
+input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    color: #2a423a;
+    font-style: italic;
+    padding: 1em;
+}
+
+input[type=button] {
+    width: 100%;
+    padding: 20px 0;
+    margin-top: 20px;
+    background-color: #2a423a;
+    font-family: "Poppins", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    color: #e2e3ed;
+    border: none;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 /* Features */
@@ -254,7 +287,6 @@ aside {
 
 .features h2 {
     margin-bottom: 60px;
-    line-height: 1.875em;
 }
 
 .features article {
@@ -280,10 +312,12 @@ aside {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background-color: #2a423a;
 }
 
 .reviews h2 {
     margin-bottom: 40px;
+    line-height: 1;
 }
 
 .reviews h3 {
@@ -300,6 +334,7 @@ aside {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #527158;
 }
 
 .contact-section {
@@ -307,6 +342,7 @@ aside {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #2a423a;
 }
 
 .contact-content p {
@@ -322,6 +358,7 @@ aside {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -334,10 +371,15 @@ aside {
 
 .faq h2 {
     margin-bottom: 40px;
+    line-height: 1;
 }
 
 .faq-content {
     margin-bottom: 50px;
+}
+
+.faq-content-h4 {
+    line-height: 1.333;
 }
 
 /* ==========================================================================
@@ -435,6 +477,16 @@ aside {
         margin: 100px 0;
     }
 
+    h2 {
+        font-size: 2.25em;
+        line-height: 1.333;
+    }
+
+    h3, h4 {
+        font-size: 1.5em;
+        line-height: 1.25;
+    }
+
     /* Header */
 
     header {
@@ -447,8 +499,13 @@ aside {
         justify-content: space-between;
     }
 
+    header figure {
+        width: 30%;
+    }
+
     header nav {
         width: 20%;
+        font-size: 1em;
     }
 
     header nav ul {
@@ -460,7 +517,11 @@ aside {
     }
 
     /* Hero Area */
-
+    .hero-area h1 {
+        font-size: 3em;
+        line-height: 1;
+        margin: 0;
+    }
     /*Aside */
 
     aside .content-wrapper {
@@ -477,6 +538,10 @@ aside {
     }
 
     /* Features */
+
+    .features h2 {
+        margin-bottom: 20px;
+    }
 
     .features article {
         flex-basis: 50%;
@@ -497,8 +562,17 @@ aside {
         justify-content: space-between;
     }
 
+    .reviews h2 {
+        width: 85%;
+    }
+
     .reviews article div {
         width: 49%;
+    }
+
+    .reviews h3 {
+        width: 75%;
+        margin: 0;
     }
 
     /* Footer */
@@ -508,14 +582,24 @@ aside {
         margin: 100px 0;
     }
 
-    .footer-content {
+    footer .footer-content {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-direction: row;
     }
 
     footer .contact {
         margin-bottom: 0;
+    }
+
+    footer h4 {
+        font-size: 1.5em;
+        margin-bottom: 40px;
+    }
+
+    footer p {
+        line-height: 1.285;
     }
 
     footer .copyright {
@@ -547,13 +631,13 @@ aside {
         align-items: flex-start;
     }
 
+    .contact-content h4 {
+        font-size: 1.5em;
+    }
+
     /*===========================================================================
       FAQ page
       =========================================================================*/
-
-      header {
-          padding: 15px 0;
-      }
 
       .faq .content-wrapper {
           justify-content: space-between;
@@ -566,19 +650,47 @@ aside {
       .faq h2 {
           width: 100%;
       }
+
+      .faq h4,
+      .faq p {
+          font-size: 0.875em;
+          line-height: 1.125;
+      }
 }
 
 @media only screen and (min-width: 1200px) {
-    /*Desktop sytles here*/
+    /* General Styles */
+
+    header {
+        padding: 15px 0;
+    }
 
     .content-wrapper {
         max-width: 960px;
+    }
+
+    h3, h4 {
+        font-size: 1.875em;
+    }
+
+    p {
+        font-size: 1.125em;
+        line-height:1.333;
+    }
+
+
+
+    /* Header */
+
+    header nav {
+        font-size: 1.125em;
     }
 
     /* Hero */
 
     .hero-area h1 {
         width: 60%;
+        font-size: 3.75em;
     }
 
     /* Aside */
@@ -604,8 +716,16 @@ aside {
 
     /* Reviews */
 
+    .reviews h2 {
+        padding-bottom: 50px;
+    }
+
     .reviews article div {
         width: 42%;
+    }
+
+    footer h4 {
+        font-size: 1.875em;
     }
 
 /*===========================================================================
@@ -617,12 +737,24 @@ aside {
         width: 95%;
     }
 
+    .mission h2,
+    .contact-section h2 {
+        font-size: 3em;
+    }
+
 /*===========================================================================
   FAQ page
   =========================================================================*/
 
     .faq h2 {
         width: 100%;
+        font-size: 3em;
+    }
+
+    .faq p,
+    .faq h4 {
+        font-size: 1.125em;
+        line-height: 1;
     }
 }
 
