--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,21 @@ input[type=button] {
     margin: 0;
 }
 
+.map-container {
+    position: relative;
+    padding-bottom: 125%;
+    height: 0;
+    overflow: hidden;
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /*===========================================================================
   FAQ page
   =========================================================================*/
