Made map responsive for breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -665,6 +665,10 @@ input[type=button] {
         font-size: 1.5em;
     }
 
+    .map-container {
+        padding-bottom: 45%;
+    }
+
     /*===========================================================================
       FAQ page
       =========================================================================*/
@@ -770,6 +774,10 @@ input[type=button] {
     .mission h2,
     .contact-section h2 {
         font-size: 3em;
+    }
+
+    .map-container {
+        padding-bottom: 37%;
     }
 
 /*===========================================================================
