--- a/css/main.css
+++ b/css/main.css
@@ -93,9 +93,9 @@ html {
 }
 
 body {
-    font-family: "Open Sans", sans-serif;
     font-size: 1em;
-    color: #e2e3ed;
+    font-family: "Open Sans", sans-serif;
+        color: #e2e3ed;
     text-align: left;
 }
 
@@ -111,14 +111,15 @@ a {
 
 h2 {
     font-family: "Poppins", sans-serif;
-    font-size: 1.875em;
     font-weight: 500;
+    font-size: 1.875em;
+
 }
 
 h3, h4 {
     font-family: "Poppins", sans-serif;
-    font-size: 1.125em;
     font-weight: 500;
+    font-size: 1.125em;
     margin: 20px 0;
 }
 
@@ -147,11 +148,11 @@ address {
 /*-----------Base Header - Footer Styles ------------*/
 header,
 footer {
+    background-color: #202322;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    background-color: #202322;
 }
 
 header {
@@ -159,35 +160,11 @@ header {
 }
 
 header .content-wrapper {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    margin: 0;
-}
-
-.header-divider {
-    width: 100%;
-    height: 1px;
-    margin: 10px 0 20px 0;
-    background-color: #3a3a3a;
-}
-
-header nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row wrap;
-    width: 60%;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 1.125em;
-}
-
-header nav ul {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
 }
 
 header figure {
@@ -198,9 +175,33 @@ header figure {
     flex-flow: row wrap;
 }
 
+.header-divider {
+    background-color: #3a3a3a;
+    height: 1px;
+    width: 100%;
+    margin: 10px 0 20px 0;
+}
+
+header nav {
+    width: 60%;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header nav ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 footer {
-    flex-direction: column;
     text-align: center;
+    flex-direction: column;
 }
 
 footer p {
@@ -247,8 +248,8 @@ footer .copyright {
 }
 
 .hero-area h1 {
-    font-family: "Poppins", Helvetica, Arial, sans-serif;
     font-size: 2.25em;
+    font-family: "Poppins", Helvetica, Arial, sans-serif;
     font-weight: 500;
     line-height: 1.2;
 }
@@ -256,11 +257,11 @@ footer .copyright {
 /* Aside */
 
 aside {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    background-color: #527158;
 }
 
 aside .form {
@@ -292,7 +293,7 @@ input[type=button] {
 /* Features */
 
 .features {
-    background: url(../img/features-image.jpg);
+    background: url("../img/features-image.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
@@ -316,18 +317,23 @@ input[type=button] {
     flex-flow: row wrap;
 }
 
+.features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+}
+
 .features p {
-    margin: 0;
     text-align: center;
+    margin: 0;
 }
 
 /* Reviews */
 
 .reviews {
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    background-color: #2a423a;
 }
 
 .reviews h2 {
@@ -345,38 +351,39 @@ input[type=button] {
   =========================================================================*/
 
 .mission {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    background-color: #527158;
+}
+
+.map-container {
+    /*width: 100% */
+    height: 0;
+    padding-bottom: 125%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .contact-section {
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    background-color: #2a423a;
 }
 
 .contact-content p {
     margin: 0;
-}
-
-.map-container {
-    position: relative;
-    padding-bottom: 125%;
-    height: 0;
-    overflow: hidden;
-}
-
-.map-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 }
 
 /*===========================================================================
@@ -384,11 +391,11 @@ input[type=button] {
   =========================================================================*/
 
 .faq {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -408,7 +415,7 @@ input[type=button] {
     margin-bottom: 50px;
 }
 
-.faq-content-h4 {
+.faq-content h4 {
     line-height: 1.333;
 }
 
@@ -500,6 +507,8 @@ input[type=button] {
    Modify as content requires.
    ========================================================================== */
 @media only screen and (min-width: 768px) {
+    /* Tabled styles here  */
+
     /* General styles */
 
     .content-wrapper {
@@ -535,7 +544,7 @@ input[type=button] {
 
     header nav {
         width: 20%;
-        font-size: 1em;
+        font-size: 1em; /*not in theirs*/
     }
 
     header nav ul {
@@ -547,11 +556,17 @@ input[type=button] {
     }
 
     /* Hero Area */
+
+    .hero-area {
+        min-height: 600px;
+    }
+
     .hero-area h1 {
         font-size: 3em;
         line-height: 1;
         margin: 0;
     }
+
     /*Aside */
 
     aside .content-wrapper {
@@ -574,14 +589,14 @@ input[type=button] {
     }
 
     .features article {
-        flex-basis: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-flow: column wrap;
+        flex-basis: 50%;
     }
 
-    .features .features-items {
+    .features .features-item-description {
         width: 62%;
     }
 
@@ -596,6 +611,7 @@ input[type=button] {
         width: 85%;
     }
 
+    .reviews article figure,
     .reviews article div {
         width: 49%;
     }
@@ -651,6 +667,10 @@ input[type=button] {
         width: 45%;
     }
 
+    .map-container {
+        padding-bottom: 45.5%;
+    }
+
     .contact-section .content-wrapper h2 {
         width: 80%;
     }
@@ -663,10 +683,6 @@ input[type=button] {
 
     .contact-content h4 {
         font-size: 1.5em;
-    }
-
-    .map-container {
-        padding-bottom: 45%;
     }
 
     /*===========================================================================
@@ -703,7 +719,13 @@ input[type=button] {
         max-width: 960px;
     }
 
-    h3, h4 {
+/* h2 {
+    font-size 2.25em;
+}
+this is redundant from tablet media query, so I didn't include it */
+
+    h3,
+    h4 {
         font-size: 1.875em;
     }
 
@@ -712,19 +734,18 @@ input[type=button] {
         line-height:1.333;
     }
 
-
-
     /* Header */
 
     header nav {
         font-size: 1.125em;
     }
+    /* they didn't include this for some reason, even though the size changes */
 
     /* Hero */
 
     .hero-area h1 {
-        width: 60%;
         font-size: 3.75em;
+        width: 80%;
     }
 
     /* Aside */
@@ -736,6 +757,10 @@ input[type=button] {
     aside .content-wrapper .form-description,
     aside .content-wrapper .form {
         width: 30%;
+    }
+
+    .form-description p {
+        fontsize: 1.125em;
     }
 
     /* Features */
@@ -766,18 +791,18 @@ input[type=button] {
   About page
   =========================================================================*/
 
-    .mission h2,
+  .map-container {
+      padding-bottom: 37.5%;
+  }
+
+  .mission h2,
     .contact-section .content-wrapper h2 {
         width: 95%;
-    }
-
-    .mission h2,
-    .contact-section h2 {
         font-size: 3em;
     }
 
-    .map-container {
-        padding-bottom: 37%;
+    .contact-content h4 {
+        font-size: 1.875em;
     }
 
 /*===========================================================================
@@ -789,18 +814,11 @@ input[type=button] {
         font-size: 3em;
     }
 
-    .faq p,
-    .faq h4 {
+    .faq h4
+    .faq p, {
         font-size: 1.125em;
         line-height: 1;
     }
-}
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
